...
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:background="#CBCBCB"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/User"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CBCBCB"
            android:gravity="center|left"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/test"
...
            android:layout_weight="1"
            android:background="@color/buttonColor"
            android:text="Test"
            android:textColor="@color/textButtonColor" />

        <Button
            android:id="@+id/User_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_marginTop="10px"
            android:layout_marginRight="10px"
            android:layout_marginBottom="10px"
            android:layout_weight="1"
            android:background="@color/buttonColor"
            android:text="User informations"
            android:textColor="@color/textButtonColor" />

        <Button
            android:id="@+id/Test_performed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_marginTop="10px"
            android:layout_marginBottom="10px"
            android:layout_weight="1"
            android:background="@color/buttonColor"
            android:text="Test performed"
            android:textColor="@color/textButtonColor" />
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ProfiloPaziente"
        tools:showIn="@layout/profilo_paziente">

        <LinearLayout
            android:id="@+id/container_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/container_lista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lista_esami"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:orientation="vertical">

                    <TextView
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10px"
                        android:text="Select an exam to see more details:" />

                    <ListView
                        android:id="@+id/listBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:choiceMode="singleChoice"
                        android:clickable="true"
                        android:divider="@color/buttonColor"
                        android:dividerHeight="2dp"
                        android:state_pressed="false"
                        android:state_selected="false">

                    </ListView>

                    <TableLayout
                        android:id="@+id/table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10px"
                        android:stretchColumns="*">

                        <TableRow
...
                    </TableLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Email"
                    android:hint="Email"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="Password"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Left diopters"
                    android:hint="Left diopters"/>

                <Button
                    android:id="@+id/modificaDati"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/textButtonColor"
                    android:background="@color/buttonColor"
                    android:text="Edit" />
...
